Tests hechos y algún añadido aparte.